{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 703,
  "lineage": "2061828e-eb3d-ef8a-9199-c76742d32490",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0365637b1c60d2c94",
            "association_id": "eipassoc-01fe8281e91a37ada",
            "domain": "vpc",
            "id": "eipalloc-0365637b1c60d2c94",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e837a1b27a2084d0",
            "private_dns": "ip-10-0-0-120.us-west-2.compute.internal",
            "private_ip": "10.0.0.120",
            "public_dns": "ec2-54-191-235-57.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.235.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "Dev",
              "Name": "arya_eip"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpBox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb5115914ccc4bc2",
            "arn": "arn:aws:ec2:us-west-2:471112649359:instance/i-06b94892a8656d54c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b94892a8656d54c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eesha",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e2c63ce72a8de54",
            "private_dns": "ip-10-0-0-29.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-18-236-79-98.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.79.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0967c8bacf41fbbed",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032f5f971044c3f2d",
            "tags": {
              "Env": "Dev",
              "Name": "mahii_jb_1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "mahii_jb_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5ad37e440521297"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:internet-gateway/igw-03ab7e45c69e0a605",
            "id": "igw-03ab7e45c69e0a605",
            "owner_id": "471112649359",
            "tags": {
              "Env": "Dev",
              "Name": "arya_igw"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_igw"
            },
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0365637b1c60d2c94",
            "association_id": "eipassoc-01fe8281e91a37ada",
            "connectivity_type": "public",
            "id": "nat-0a125be01ad369e62",
            "network_interface_id": "eni-0e837a1b27a2084d0",
            "private_ip": "10.0.0.120",
            "public_ip": "54.191.235.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032f5f971044c3f2d",
            "tags": {
              "Env": "Dev",
              "Name": "arya_ngw"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0902888a0378c24a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a125be01ad369e62",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0902888a0378c24a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table_association.private_rt_ass",
            "module.vpc.aws_subnet.private_sub",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ab7e45c69e0a605",
            "id": "r-rtb-04292de7f8b053a1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04292de7f8b053a1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_route_table_association.pub_rt_ass",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:route-table/rtb-0902888a0378c24a9",
            "id": "rtb-0902888a0378c24a9",
            "owner_id": "471112649359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a125be01ad369e62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Dev",
              "Name": "arya_private_rt"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:route-table/rtb-04292de7f8b053a1b",
            "id": "rtb-04292de7f8b053a1b",
            "owner_id": "471112649359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ab7e45c69e0a605",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Dev",
              "Name": "arya_pub_rt"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e62733ed0327b38",
            "route_table_id": "rtb-0902888a0378c24a9",
            "subnet_id": "subnet-0231787d912ebec9c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e27e965d59f663",
            "route_table_id": "rtb-0902888a0378c24a9",
            "subnet_id": "subnet-0b250315665487a36"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad367fd77e4b251a",
            "route_table_id": "rtb-04292de7f8b053a1b",
            "subnet_id": "subnet-032f5f971044c3f2d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db0e7772d2486d2c",
            "route_table_id": "rtb-04292de7f8b053a1b",
            "subnet_id": "subnet-0342cb0b533186bdd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:subnet/subnet-0231787d912ebec9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0231787d912ebec9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112649359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "arya_private_sub_1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_private_sub_1"
            },
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:subnet/subnet-0b250315665487a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b250315665487a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112649359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "arya_private_sub_2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_private_sub_2"
            },
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:subnet/subnet-032f5f971044c3f2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032f5f971044c3f2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112649359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "arya_pub_sub_1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_pub_sub_1"
            },
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:subnet/subnet-0342cb0b533186bdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342cb0b533186bdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112649359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "arya_pub_sub_2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_pub_sub_2"
            },
            "vpc_id": "vpc-0866b44e4def55ac6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].origon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112649359:vpc/vpc-0866b44e4def55ac6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-073f9882d9e2f16ac",
            "default_route_table_id": "rtb-02f995c10ca7fc1d1",
            "default_security_group_id": "sg-0d5ad37e440521297",
            "dhcp_options_id": "dopt-0e113e5910f8d93d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0866b44e4def55ac6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f995c10ca7fc1d1",
            "owner_id": "471112649359",
            "tags": {
              "Env": "Dev",
              "Name": "arya_vpc"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "arya_vpc"
            }
          }
        }
      ]
    }
  ]
}